feat: 사용자로부터 받은 추가정보로 구매개수 변경하는 로직 구현